GNOME Bugzilla – Bug 656771
invalid read in gst_pad_push_event()
Last modified: 2011-08-18 02:34:03 UTC
Created attachment 194075 [details] valgrind log I've observed the following warning on the terminal when trying to seek a stream with gst_element_seek(): GStreamer-CRITICAL **: gst_pad_push_event: assertion `GST_IS_EVENT (event)' failed valgrind log attached which shows an invalid read in gst_pad_push_event()
What's the exact pipeline? Most likely a refcount bug somewhere. Are you sure the refcount bug is not in your code or in the bindings (if you're using bindings for gst stuff)? Can you provide a C test case that triggers this? Or does it also happen with the seek example in -base/tests/examples/seek/, or totem, or gst-launch-0.10 playbin2 uri=file:///... video-sink='navseek ! autovideosink' ?
Created attachment 194077 [details] C test case No, I'm not entirely sure that the problem isn't due to my code. That said, I can't see any obvious refcount issues. I've attached a C test case that displays the problem on my machine.
Thanks for that. I can reproduce the problem with git of things.
It's probably because you're doing the seek from the streaming thread, which isn't really allowed/expected (same for the set_state(pipeline,...) btw).
Ah! of course. Novice gstreamer user error. Sorry for the hasty bug report, and thanks for your help.