baseparse: fix crash on seek from streaming thread on newsegment event

Event if it's not allowed, we can easily prevent it, so let's do
that.

https://bugzilla.gnome.org/show_bug.cgi?id=656771